--- a/merch.html
+++ b/merch.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bellefair&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -41,6 +41,71 @@
                 </form>
             </div>
         </div>
+      <div class="grid">
+        <div class="grid-item">
+          <img src="images/skates.jpg" alt="Ice Skates"/>
+          <div class="content">
+                <h2>Signed Ice Skates!</h2>
+                <div class="order">
+                    <p>These ice skates represent the soul and energy we want out there for our fans.</p>
+                <div class="pricing">$95.00 CAD</div>
+                <form>
+                    <label for="item-total" >Quantity:</label>
+                        <select name="amount" id="item-total" required>
+                            <option value="" disabled="disabled" selected="selected">--Please choose an option--</option>
+                            <option value="1">1</option>
+                        </select>
+                        <div class="product-actions">
+                            <button class="add-to-cart">Add to Cart</button>
+                            <button class="wishlist">♡ Wishlist</button>
+                        </div>
+                </form>
+            </div>
+          </div>
+        </div>
+        <div class="grid-item">
+          <img src="images/shirt.jpg" alt="Shirt"/>
+          <div class="content">
+                <h2>Album Graphic Tee!</h2>
+                <div class="order">
+                    <p>Wear our albums art wherever you go! 50% of the proceeds go straight to the artist!</p>
+                <div class="pricing">$35.00 CAD</div>
+                <form>
+                    <label for="item-total" >Quantity:</label>
+                        <select name="amount" id="item-total" required>
+                            <option value="" disabled="disabled" selected="selected">--Please choose an option--</option>
+                            <option value="1">1</option>
+                        </select>
+                        <div class="product-actions">
+                            <button class="add-to-cart">Add to Cart</button>
+                            <button class="wishlist">♡ Wishlist</button>
+                        </div>
+                </form>
+            </div>
+          </div>
+        </div>
+        <div class="grid-item">
+          <img src="images/beanie.jpg" alt="Beanie" />
+          <div class="content">
+                <h2>Handmade Beanie</h2>
+                <div class="order">
+                    <p>Handmade by our lead singer! Only a few available! Get them while they're still available!</p>
+                <div class="pricing">$65.00 CAD</div>
+                <form>
+                    <label for="item-total" >Quantity:</label>
+                        <select name="amount" id="item-total" required>
+                            <option value="" disabled="disabled" selected="selected">--Please choose an option--</option>
+                            <option value="1">1</option>
+                        </select>
+                        <div class="product-actions">
+                            <button class="add-to-cart">Add to Cart</button>
+                            <button class="wishlist">♡ Wishlist</button>
+                        </div>
+                </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>Follow the band on our social media!</footer>
 </body>
